--- a/mike's stuff/Pixie/Info.plist
+++ b/mike's stuff/Pixie/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>Pixie.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>edu.calpoly.csc.2154.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
