--- a/mike's stuff/Podfile
+++ b/mike's stuff/Podfile
@@ -1,9 +1,13 @@
-source 'https://github.com/CocoaPods/Specs.git'
+# Uncomment this line to define a global platform for your project
+# platform :ios, '6.0'
 
-platform :ios, '8.0'
-
-# ignore all warnings from all pods
-inhibit_all_warnings!
+target 'Pixie' do
 
 pod 'JSQMessagesViewController'
-pod 'JSQSystemSoundPlayer'
+
+end
+
+target 'PixieTests' do
+
+end
+
