--- a/mike's stuff/Pixie/Info.plist
+++ b/mike's stuff/Pixie/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>To get current location.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>To get current location.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -39,9 +35,17 @@
 	<string>Pixie</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>To get current location.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>To get current location.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Syncopate-Regular.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
